<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sk.branislavremen.universityapp.MainActivity" >

    <Button
        android:id="@+id/rssNewsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rssNewsButton" />

    <Button
        android:id="@+id/eventsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventsButton" />

    <Button
        android:id="@+id/placesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placesButton" />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nastenka" />

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Feedback" />
    
      <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nastavenia" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="admin" />

</LinearLayout>